config/performance/cloudflare/traefik-compress-api.yaml
# API Compression Middleware - Selective JSON Compression
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-compress
  namespace: apps
spec:
  compress:
    algorithms:
      - "br"
      - "zstd"
      - "gzip"
    includedContentTypes:
      - "application/json"
      - "application/geo+json"
      - "application/ld+json"
      - "application/problem+json"
      - "application/vnd.api+json"
    minResponseBodyBytes: 256
