config/performance/cloudflare/traefik-compress-brotli.yaml
# Traefik Compression Middleware - Brotli/Zstd/Gzip
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress-brotli
  namespace: traefik
spec:
  compress:
    algorithms:
      - "br"
      - "zstd"
      - "gzip"
    includedContentTypes:
      - "text/html"
      - "text/css"
      - "text/javascript"
      - "text/plain"
      - "text/xml"
      - "text/json"
      - "application/javascript"
      - "application/json"
      - "application/xml"
      - "application/rss+xml"
      - "application/atom+xml"
      - "application/geo+json"
      - "application/ld+json"
      - "application/manifest+json"
      - "application/x-javascript"
      - "application/x-web-app-manifest+json"
      - "application/xhtml+xml"
      - "application/rdf+xml"
      - "font/woff"
      - "font/woff2"
      - "font/ttf"
      - "font/otf"
      - "font/sfnt"
      - "image/svg+xml"
      - "image/x-icon"
      - "application/wasm"
    excludedContentTypes:
      - "image/*"
      - "video/*"
      - "audio/*"
      - "application/zip"
      - "application/gzip"
      - "application/x-gzip"
      - "application/x-bzip2"
      - "application/x-rar"
      - "application/x-7z-compressed"
      - "application/octet-stream"
    minResponseBodyBytes: 1024
