config/performance/cloudflare/traefik-compress-nextcloud.yaml
# Nextcloud Compression Middleware - Optimized for WebDAV
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-compress
  namespace: apps
spec:
  compress:
    algorithms:
      - "br"
      - "zstd"
      - "gzip"
    excludedContentTypes:
      - "application/davmount+xml"
      - "application/vnd.ms-fontobject"
      - "application/x-font-ttf"
      - "application/x-font-opentype"
      - "application/octet-stream"
    minResponseBodyBytes: 512
