config/performance/cloudflare/traefik-compress-static.yaml
# Static Assets Middleware - Aggressive Caching + Compression
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: static-assets
  namespace: traefik
spec:
  headers:
    customResponseHeaders:
      Cache-Control: "public, max-age=31536000, immutable"
      Vary: "Accept-Encoding"
    customRequestHeaders:
      X-Forwarded-Proto: "https"
  compress:
    algorithms:
      - "br"
      - "zstd"
      - "gzip"
    includedContentTypes:
      - "text/css"
      - "text/javascript"
      - "application/javascript"
      - "font/woff"
      - "font/woff2"
      - "font/ttf"
      - "image/svg+xml"
      - "application/wasm"
    minResponseBodyBytes: 512
